# pictionary

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sst.config.ts
.cursor/rules/: sst.mdc
.github/workflows/: deploy.yml
core/: pyproject.toml
functions/: pyproject.toml
functions/src/functions/: __init__.py  api.py
functions/src/functions/config/: database.py  settings.py
functions/src/functions/models/: game.py
functions/src/functions/routes/: __init__.py  game_routes.py  health_routes.py
functions/src/functions/services/: database_service.py  drawing_service.py  game_service.py
functions/src/functions/utils/: hints.py  scoring.py  words.py
web/: .prettierignore  .prettierrc  eslint.config.mjs  instrumentation-client.js  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/game/: game-board.tsx  game-over-message.tsx  game-stats.tsx  guess-history.tsx  guess-input.tsx  start-game-screen.tsx
web/src/hooks/: use-game-state.ts  use-game-timer.ts  use-guess-submission.ts
web/src/lib/: api-client.ts  constants.ts  game-utils.ts
web/src/types/: game.ts
